spring active profile baseUrl설정 이미지 패키지 경로 수정, 이름 수정 import 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
       password: ${SPRING_DATA_REDIS_PASSWORD}
   web:
     resources:
-      static-locations: file:./uploads/static/
+      static-locations: file:./uploads
 
 mybatis:
   configuration:
