예외처리 수정 ApiResponse응답 코드 수정 ImageKitUtil 메소드 오버로드 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,7 @@ imagekit:
   publicKey: ${IMAGEKIT_PUBLIC_KEY}
   privateKey: ${IMAGEKIT_PRIVATE_KEY}
   urlEndpoint: ${IMAGEKIT_URL_ENDPOINT}
+  defaultExpireTime: 60
 
 logging:
   level:
