--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,10 +12,10 @@ spring:
       port: ${SPRING_DATA_REDIS_PORT}
       password: ${SPRING_DATA_REDIS_PASSWORD}
   mail:
-    host: ${SPRING_DATA_EMAIL_HOST}
-    port: ${SPRING_DATA_EMAIL_PORT}
-    username: ${SPRING_DATA_EMAIL_USERNAME}
-    password: ${SPRING_DATA_EMAIL_PASSWORD}
+    host: ${SPRING_MAIL_HOST}
+    port: ${SPRING_MAIL_PORT}
+    username: ${SPRING_MAIL_USERNAME}
+    password: ${SPRING_MAIL_PASSWORD}
     properties:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
