암호화UTIL수정 MAPPER 파라미터 명 수정

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.github.imagekit-developer:imagekit-java:2.0.1'
     implementation 'com.squareup.okio:okio:3.5.0'
     implementation 'mysql:mysql-connector-java:8.0.33'
+    implementation 'commons-codec:commons-codec:1.19.0'
 
     compileOnly 'org.projectlombok:lombok'
 
