--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.squareup.okio:okio:3.5.0'
     implementation 'mysql:mysql-connector-java:8.0.33'
     implementation 'commons-codec:commons-codec:1.19.0'
+    implementation 'org.jasypt:jasypt:1.9.3'
 
 
     compileOnly 'org.projectlombok:lombok'
