1. add hikari pool config 2. hikari lazy init off

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,2 +1,8 @@
 app:
   base-url: https://api.recipit.com #임의의 url
+
+spring:
+  datasource:
+    hikari:
+      minimum-idle: 3
+      maximum-pool-size: 5
