--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,10 @@ spring:
     properties:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 550MB
 
 mybatis:
   configuration:
@@ -37,3 +41,5 @@ logging:
 
 jasypt:
   password: ${JASYPT_PASSWORD}
+
+
