RC17, RC18 레시피 즐겨찾기 / 즐겨찾기 해제 개발

--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,8 @@ dependencies {
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
     implementation 'org.apache.commons:commons-lang3:3.18.0'
     implementation 'com.github.imagekit-developer:imagekit-java:2.0.1'
-    implementation 'com.squareup.okio:okio:3.5.0'
+    implementation 'com.squareup.okhttp3:okhttp:5.2.1'
+    implementation 'com.squareup.okio:okio:3.16.2'
     implementation 'mysql:mysql-connector-java:8.0.33'
     implementation 'commons-codec:commons-codec:1.19.0'
     implementation 'org.jasypt:jasypt:1.9.3'
