CORS yml설정, accept-language:국가 그룹코드 매핑 util 추가

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,9 @@
 app:
   base-url: https://api.recipit.com #임의의 url
 
+cors:
+  allowed-origins: "https://recipit.mo" #임의의 url
+
 spring:
   datasource:
     hikari:
