--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,9 +2,7 @@ app:
   base-url: "https://scdev4--recipit-api--qj5x98zdln7d.code.run/"
 
 cors:
-  allowed-origins:
-    - "http://localhost:8081"
-    - "https://scdev4--recipit-api--qj5x98zdln7d.code.run/"
+  allowed-origins: "http://localhost:8081"
 
 spring:
   datasource:
