--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,7 +2,8 @@ app:
   base-url: http://localhost:8080
 
 cors:
-  allowed-origins: "http://localhost:8081"
+  allowed-origins:
+    - http://localhost:8081
 
 spring:
   datasource:
