--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,10 +1,10 @@
 app:
-  base-url: https://scdev4--recipit-api--qj5x98zdln7d.code.run/
+  base-url: https://scdev4--recipit-api--qj5x98zdln7d.code.run
 
 cors:
   allowed-origins:
     -http://localhost:8081
-    -https://scdev4--recipit-api--qj5x98zdln7d.code.run/
+    -https://scdev4--recipit-mo--m2p477ffsl99.code.run
 
 spring:
   datasource:
