주간 인기 레시피API 조회 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,3 +48,10 @@ jasypt:
 
 internal:
   auth-key: ${INTERNAL_AUTH_KEY}
+
+server:
+  servlet:
+    session:
+      cookie:
+        name: JSESSIONID
+        same-site: none
