--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,7 +2,9 @@ app:
   base-url: http://localhost:8080
 
 cors:
-  allowed-origins: "http://localhost:8081"
+  allowed-origins:
+    http://localhost:8081,
+    http://localhost:3000
 
 spring:
   datasource:
