--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,10 +1,10 @@
 app:
-  base-url: https://api.recipit.com #임의의 url
+  base-url: https://scdev4--recipit-api--qj5x98zdln7d.code.run #임의의 url
 
 cors:
   allowed-origins:
-    -http://localhost:8081
-    -http://localhost:3000
+    http://localhost:8081,
+    http://localhost:3000
 
 spring:
   datasource:
