--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,3 +11,9 @@ spring:
     hikari:
       minimum-idle: 3
       maximum-pool-size: 5
+
+server:
+  servlet:
+    session:
+      cookie:
+        same-site: none
